feat: Java 17 compatibility + GraalJS community edition
Build/dependency changes:
- Downgrade sourceCompatibility/targetCompatibility from 23 to 17 across all modules
- Switch from org.graalvm.js:js to org.graalvm.js:js-community (runs on any JDK 17+)
- Switch from org.graalvm.sdk:graal-sdk to org.graalvm.polyglot:polyglot
- Remove org.graalvm.truffle:truffle-api (not needed with js-community)
- Fix @SupportedSourceVersion(SourceVersion.RELEASE_23) -> RELEASE_17

Java 21+ API replacements (SequencedCollection):
- List.getFirst() -> List.get(0) in 8 files
- List.getLast() -> List.get(list.size()-1) in 3 files

Verified: BUILD SUCCESSFUL with Java 17.0.17 (OpenJDK)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>