@@ -259,7 +259,7 @@ public class DialAIClient extends AbstractRestClient implements AI {
                 content = "";
             }
         } else {
-            content = choices.getFirst().getMessage().getContent();
+            content = choices.get(0).getMessage().getContent();
         }
         if (conversationObserver != null) {
             conversationObserver.addMessage(new ConversationObserver.Message(model, content));
@@ -299,7 +299,7 @@ public class DialAIClient extends AbstractRestClient implements AI {
 
             if (message.getFiles() != null && !message.getFiles().isEmpty()) {
                 // Assuming we process only the first file as an image, similar to the existing chat method
-                File imageFile = message.getFiles().getFirst();
+                File imageFile = message.getFiles().get(0);
                 String extension = ImageUtils.getExtension(imageFile);
                 String imageBase64 = ImageUtils.convertToBase64(imageFile, "png"); // Assuming png, or derive from extension
 
@@ -340,7 +340,7 @@ public class DialAIClient extends AbstractRestClient implements AI {
 
     @Override
     public String chat(String model, String message, List<File> files, JSONObject agentContext) throws Exception {
-        return chat(model, message, files != null && !files.isEmpty() ? files.getFirst() : null, agentContext);
+        return chat(model, message, files != null && !files.isEmpty() ? files.get(0) : null, agentContext);
     }
 
     @Override
